fix: do not wrap specific value types

--- a/src/components/Visualization/styles/Visualization.module.css
+++ b/src/components/Visualization/styles/Visualization.module.css
@@ -83,7 +83,7 @@
     padding: 8px 4px 6px 8px;
 }
 .dataTable .headerCell.sizeNormal {
-    padding: 4px 2px 2px 6px;
+    padding: 4px 4px 2px 6px;
 }
 .dataTable .headerCell.sizeCompact {
     padding: 3px 1px 1px 6px;
@@ -106,7 +106,7 @@
     padding: 10px 4px 8px 8px;
 }
 .dataTable .cell.sizeNormal {
-    padding: 8px 2px 6px 6px;
+    padding: 8px 6px 6px 6px;
 }
 .dataTable .cell.sizeCompact {
     padding: 6px 2px 4px 6px;
@@ -115,6 +115,10 @@
 /* Empty cell */
 .dataTable .emptyCell::after {
     content: '\00a0';
+}
+
+.dataTable .cell.nowrap {
+    white-space: nowrap;
 }
 
 /* Sizes for the table footer */
